hover-portfolio/padding16-30px/var/link-to-svg/

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -248,12 +248,19 @@ color: var(--brand-blue-color);
     padding: 0;
     margin-right: 30px;
     margin-bottom: 30px;
+    
 
     background: var(--main-background-color);
 }
 
+.list-content:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+
 .list-image {
     display: block;
+    border: 1px solid #EEEEEE;
 }
 
 .image-text {
@@ -362,6 +369,7 @@ color: var(--brand-blue-color);
 .connect-title {
 margin: 0 0 20px;
 
+font-weight: 700;
 font-size: 14px;
 line-height: 16px;
 text-transform: uppercase;
