--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -175,8 +175,10 @@ color: var(--brand-blue-color);
 }
 
 .mail {
-    margin-right: 50px;
+    margin-right: 30px;
     padding: 32px 0;
+    display: flex;
+    align-items: center;
 
     text-decoration: none;
     color: var(--secondary-text);
@@ -186,6 +188,8 @@ color: var(--brand-blue-color);
 }
 .phone {
     padding: 32px 0;
+    display: flex;
+    align-items: center;
 
     color: var(--secondary-text);
     text-decoration: none;
