--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -20,6 +20,7 @@ ul {
     --border-elements-color: #ECECEC;
     --secondary-bg-color: #F5F4FA;
     --icons-border: #EEEEEE;
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container {
@@ -67,11 +68,30 @@ ul {
     font-weight: 500;
     text-decoration: none;
     letter-spacing: 0.02em;
+
+    position: relative;
+
+    transition: color 250ms var(--timing-function);
 }
 
 .site-nav .link.current {
     color: var(--brand-blue-color);
 }
+
+.link.current::after {
+    content: '';
+    display: flex;
+    justify-content: center;
+    width: calc(100% + 3px);
+    height: 4px;
+    background-color: var(--brand-blue-color);
+    transform: translateY(1px);
+
+    position: absolute;
+    bottom: 0;
+    border-radius: 2px;
+}
+
 
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -144,7 +164,8 @@ color: var(--brand-blue-color);
     display: inline-block;
     margin-right: 10px;
     fill: var(--secondary-text);
-    
+
+    transition: fill 250ms var(--timing-function);
 }
 
 .icon-phone:hover .icon-smartphone {
@@ -171,7 +192,8 @@ color: var(--brand-blue-color);
     display: inline-block;
     margin-right: 10px;
     fill: var(--secondary-text);
-    
+
+    transition: fill 250ms var(--timing-function);
 }
 
 .mail {
@@ -185,6 +207,8 @@ color: var(--brand-blue-color);
     font-weight: 500;
     line-height: 1.17;
     letter-spacing: 0.02em;
+
+        transition: color 250ms var(--timing-function);
 }
 .phone {
     padding: 32px 0;
@@ -196,6 +220,8 @@ color: var(--brand-blue-color);
     font-weight: 500;
     line-height: 1.17;
     letter-spacing: 0.02em;
+
+        transition: color 250ms var(--timing-function);
 }
 
 
@@ -239,6 +265,9 @@ color: var(--brand-blue-color);
     color: var(--main-background-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border: none;
+
+    transition: background-color 250ms var(--timing-function),
+    box-shadow 250ms var(--timing-function);
 }
 
 .icons-list {
@@ -252,19 +281,44 @@ color: var(--brand-blue-color);
     padding: 0;
     margin-right: 30px;
     margin-bottom: 30px;
-    
 
     background: var(--main-background-color);
 }
 
 .list-content:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition: box-shadow 250ms var(--timing-function);
+}
+
+.picture-text-hover {
+    position: relative;
+    overflow: hidden;
+}
+
+.text-hover {
+    position: absolute;
+    font-size: 18px;
+    line-height: 1.55;
+    color: var(--main-background-color);
+    background-color: rgba(33, 150, 243, 0.9);
+
+    position: absolute;
+    top: 0;
+    padding: 63px 24px;
+    height: 100%;
+    transform: translateY(101%);
+    margin: 0;
+}
+
+.list-content:hover .text-hover {
+    transform: translateY(0%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
 .list-image {
     display: block;
-    border: 1px solid #EEEEEE;
+    border: 1px solid var(--icons-border);
 }
 
 .image-text {
@@ -404,6 +458,8 @@ justify-content: center;
 align-items: center;
 background-color: rgba(255, 255, 255, 0.1);
 border-radius: 50%;
+
+transition: background-color 250ms var(--timing-function);
 }
 
 .soc-icon-link:hover,
