--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -239,6 +239,9 @@ color: var(--brand-blue-color);
     cursor: pointer;
     font-family: inherit;
     background: var(--secondary-bg-color);
+
+    transition: background-color 250ms var(--timing-function),
+    box-shadow 250ms var(--timing-function);
 }
 
 .button-portfolio:not(last-child) {
@@ -252,8 +255,7 @@ color: var(--brand-blue-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border: none;
 
-    transition: background-color 250ms var(--timing-function),
-    box-shadow 250ms var(--timing-function);
+    /* transition: background-color 2500ms var(--timing-function), box-shadow 2500ms var(--timing-function); */
 }
 
 .icons-list {
@@ -294,6 +296,7 @@ color: var(--brand-blue-color);
     height: 100%;
     transform: translateY(101%);
     margin: 0;
+    transition: transform 250ms var(--timing-function);
 }
 
 .list-content:hover .text-hover {
