--- a/css/styles.css
+++ b/css/styles.css
@@ -594,7 +594,7 @@ color: var(--brand-blue-color);
     display: flex;
     justify-content: center;
     align-items: center;
-
+    transition: border-color 250ms var(--timing-function);
 }
 
 .partners-item:hover,
@@ -789,6 +789,7 @@ align-items: baseline;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    background-color: var(--main-background-color);
 
     display: flex;
     justify-content: center;
